--- a/style.css
+++ b/style.css
@@ -261,7 +261,7 @@ nav i {
 .project-card {
     background: white;
     border-radius: 5px;
-    overflow: scroll;
+    overflow: hidden;
     box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1);
     transition: transform 0.3s ease;
 }
